# cv2_assignments

ass2/: main.m  main.m~  main_chaining.m  match_list.mat  point_view_matrix.mat
ass2/other/: readmePVM.txt
assignment_1/: README.txt  find_closest_point_to_target.m  get_closest_point_to_target.m  get_rms_error.m  get_rotation_and_translation_matrix.m  get_transformation_matrix.m  icp_algorithm.m  main.m  main_icp.m  main_merge_scenes.m  our_regression_plot.m  this_is_test.m
assignment_1/code/: estimate_normal.m  get_closest_point_to_target.m  get_informed_sample.m  get_rms_error.m  get_uniform_sample.m  icp_algorithm.m  merge_frames.m  our_plot3d.m  plot_error.m  readPcd.m  sample.m  scap_code.m  surfature.m
assignment_1/plots/: icp_error_allpoints_iter28.eps  icp_error_allpoints_iter28.fig  icp_pointcloud_allpoints_iter0.eps  icp_pointcloud_allpoints_iter0.fig  icp_pointcloud_allpoints_iter28.eps  icp_pointcloud_allpoints_iter28.fig
assignment_1/plotting_code/: plot3d_pointcloud.m  plot_error.m
assignment_1/test_results/: stability_allpoints_iter1.csv  stability_informed_iter1.csv  stability_informed_iter10.csv  timing_allpoints_iter1.csv  tolerance_allpoints_iter1.csv
assignment_2/: main.m  main_chaining.m  main_structure.m  pointview_t0.1.mat  pointview_t0.2.mat  test.eps  test.m
assignment_3/: CMakeLists.txt  main.cpp
assignment_3/3dframes/: 00000.3df  00001.3df  00002.3df  00003.3df  00004.3df  00005.3df  00006.3df  00007.3df
assignment_3/Frame3D/: FileUtils.cpp  FileUtils.h  Frame3D.cpp  Frame3D.h
cv2_exam_prep/: literature.txt
(+83 files in other folders)
